Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ClassCycle/ClassCycle3a.out
ClassCycle3b.java:6:1: compiler.err.cyclic.inheritance: ClassCycle3b
1 error
